// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validateName rejects empty input '   ' 1`] = `
<Memo(MemoizedFormattedMessage)
  defaultMessage="Name is required."
  id="xpack.remoteClusters.form.errors.nameMissing"
/>
`;

exports[`validateName rejects empty input 'null' 1`] = `
<Memo(MemoizedFormattedMessage)
  defaultMessage="Name is required."
  id="xpack.remoteClusters.form.errors.nameMissing"
/>
`;

exports[`validateName rejects empty input 'undefined' 1`] = `
<Memo(MemoizedFormattedMessage)
  defaultMessage="Name is required."
  id="xpack.remoteClusters.form.errors.nameMissing"
/>
`;

exports[`validateName rejects invalid characters ' ' 1`] = `
<Memo(MemoizedFormattedMessage)
  defaultMessage="Name is required."
  id="xpack.remoteClusters.form.errors.nameMissing"
/>
`;

exports[`validateName rejects invalid characters '!' 1`] = `
<Memo(MemoizedFormattedMessage)
  defaultMessage="Remove the {characterListLength, plural, one {character} other {characters}} {characterList} from the name."
  id="xpack.remoteClusters.form.errors.illegalCharacters"
  values={
    Object {
      "characterList": <strong>
        !
      </strong>,
      "characterListLength": 1,
    }
  }
/>
`;

exports[`validateName rejects invalid characters '#' 1`] = `
<Memo(MemoizedFormattedMessage)
  defaultMessage="Remove the {characterListLength, plural, one {character} other {characters}} {characterList} from the name."
  id="xpack.remoteClusters.form.errors.illegalCharacters"
  values={
    Object {
      "characterList": <strong>
        #
      </strong>,
      "characterListLength": 1,
    }
  }
/>
`;

exports[`validateName rejects invalid characters '$' 1`] = `
<Memo(MemoizedFormattedMessage)
  defaultMessage="Remove the {characterListLength, plural, one {character} other {characters}} {characterList} from the name."
  id="xpack.remoteClusters.form.errors.illegalCharacters"
  values={
    Object {
      "characterList": <strong>
        $
      </strong>,
      "characterListLength": 1,
    }
  }
/>
`;

exports[`validateName rejects invalid characters '%' 1`] = `
<Memo(MemoizedFormattedMessage)
  defaultMessage="Remove the {characterListLength, plural, one {character} other {characters}} {characterList} from the name."
  id="xpack.remoteClusters.form.errors.illegalCharacters"
  values={
    Object {
      "characterList": <strong>
        %
      </strong>,
      "characterListLength": 1,
    }
  }
/>
`;

exports[`validateName rejects invalid characters '&' 1`] = `
<Memo(MemoizedFormattedMessage)
  defaultMessage="Remove the {characterListLength, plural, one {character} other {characters}} {characterList} from the name."
  id="xpack.remoteClusters.form.errors.illegalCharacters"
  values={
    Object {
      "characterList": <strong>
        &
      </strong>,
      "characterListLength": 1,
    }
  }
/>
`;

exports[`validateName rejects invalid characters '(' 1`] = `
<Memo(MemoizedFormattedMessage)
  defaultMessage="Remove the {characterListLength, plural, one {character} other {characters}} {characterList} from the name."
  id="xpack.remoteClusters.form.errors.illegalCharacters"
  values={
    Object {
      "characterList": <strong>
        (
      </strong>,
      "characterListLength": 1,
    }
  }
/>
`;

exports[`validateName rejects invalid characters ')' 1`] = `
<Memo(MemoizedFormattedMessage)
  defaultMessage="Remove the {characterListLength, plural, one {character} other {characters}} {characterList} from the name."
  id="xpack.remoteClusters.form.errors.illegalCharacters"
  values={
    Object {
      "characterList": <strong>
        )
      </strong>,
      "characterListLength": 1,
    }
  }
/>
`;

exports[`validateName rejects invalid characters '*' 1`] = `
<Memo(MemoizedFormattedMessage)
  defaultMessage="Remove the {characterListLength, plural, one {character} other {characters}} {characterList} from the name."
  id="xpack.remoteClusters.form.errors.illegalCharacters"
  values={
    Object {
      "characterList": <strong>
        *
      </strong>,
      "characterListLength": 1,
    }
  }
/>
`;

exports[`validateName rejects invalid characters '+' 1`] = `
<Memo(MemoizedFormattedMessage)
  defaultMessage="Remove the {characterListLength, plural, one {character} other {characters}} {characterList} from the name."
  id="xpack.remoteClusters.form.errors.illegalCharacters"
  values={
    Object {
      "characterList": <strong>
        +
      </strong>,
      "characterListLength": 1,
    }
  }
/>
`;

exports[`validateName rejects invalid characters ',' 1`] = `
<Memo(MemoizedFormattedMessage)
  defaultMessage="Remove the {characterListLength, plural, one {character} other {characters}} {characterList} from the name."
  id="xpack.remoteClusters.form.errors.illegalCharacters"
  values={
    Object {
      "characterList": <strong>
        ,
      </strong>,
      "characterListLength": 1,
    }
  }
/>
`;

exports[`validateName rejects invalid characters '.' 1`] = `
<Memo(MemoizedFormattedMessage)
  defaultMessage="Remove the {characterListLength, plural, one {character} other {characters}} {characterList} from the name."
  id="xpack.remoteClusters.form.errors.illegalCharacters"
  values={
    Object {
      "characterList": <strong>
        .
      </strong>,
      "characterListLength": 1,
    }
  }
/>
`;

exports[`validateName rejects invalid characters '<' 1`] = `
<Memo(MemoizedFormattedMessage)
  defaultMessage="Remove the {characterListLength, plural, one {character} other {characters}} {characterList} from the name."
  id="xpack.remoteClusters.form.errors.illegalCharacters"
  values={
    Object {
      "characterList": <strong>
        &lt;
      </strong>,
      "characterListLength": 1,
    }
  }
/>
`;

exports[`validateName rejects invalid characters '>' 1`] = `
<Memo(MemoizedFormattedMessage)
  defaultMessage="Remove the {characterListLength, plural, one {character} other {characters}} {characterList} from the name."
  id="xpack.remoteClusters.form.errors.illegalCharacters"
  values={
    Object {
      "characterList": <strong>
        &gt;
      </strong>,
      "characterListLength": 1,
    }
  }
/>
`;

exports[`validateName rejects invalid characters '?' 1`] = `
<Memo(MemoizedFormattedMessage)
  defaultMessage="Remove the {characterListLength, plural, one {character} other {characters}} {characterList} from the name."
  id="xpack.remoteClusters.form.errors.illegalCharacters"
  values={
    Object {
      "characterList": <strong>
        ?
      </strong>,
      "characterListLength": 1,
    }
  }
/>
`;

exports[`validateName rejects invalid characters '@' 1`] = `
<Memo(MemoizedFormattedMessage)
  defaultMessage="Remove the {characterListLength, plural, one {character} other {characters}} {characterList} from the name."
  id="xpack.remoteClusters.form.errors.illegalCharacters"
  values={
    Object {
      "characterList": <strong>
        @
      </strong>,
      "characterListLength": 1,
    }
  }
/>
`;

exports[`validateName rejects invalid characters '^' 1`] = `
<Memo(MemoizedFormattedMessage)
  defaultMessage="Remove the {characterListLength, plural, one {character} other {characters}} {characterList} from the name."
  id="xpack.remoteClusters.form.errors.illegalCharacters"
  values={
    Object {
      "characterList": <strong>
        ^
      </strong>,
      "characterListLength": 1,
    }
  }
/>
`;
